Fixed output and console scolling

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -50,7 +50,7 @@
     </div>
     <div id="consoleTab" class="tabContent">
       <span class="btn"><a href="javascript:void(0);" onClick="$('#consoleArea').html(''); return false;" >[Clear]</a></span>
-      <div id="consoleArea" class="outputArea outputText"></div>
+      <div id="consoleArea" class="outputArea consoleText"></div>
     </div>
   </div>
 </div>
