Refactored generating of code.

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -5,6 +5,7 @@
 </style>
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="interceptTabs.js"></script>
+<script type="text/javascript" src="ws_util.js"></script>
 <script type="text/javascript" src="ws_ide.js"></script>
 <script type="text/javascript" src="ws_core.js"></script>
 <script type="text/javascript" src="ws_optimizer.js"></script>
