Implemented toggling highlight.

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -21,7 +21,17 @@
 <span class="btn">
   <a href="javascript:void(0);" onClick="ee.wsIde.optimizeProgram();">[Optimize]</a>
 </span>
+
+<span class="btn" id="btnEnableHighlight" style="display:none">
+  <a href="javascript:void(0);" onClick="ee.wsIde.setHighlight(true);">[ ]Highlight</a>
+</span>
+
+<span class="btn" id="btnDisableHighlight" style="display: none;">
+  <a href="javascript:void(0);" onClick="ee.wsIde.setHighlight(false);">[X]Highlight</a>
+<span>
 </div>
+
+
 <div id="panels">
 <div id="panelMiddle">
 <div class="scrollable">
