Added panels and panel labels.

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -33,7 +33,14 @@
 
 
 <div id="panels">
-<div id="panelMiddle">
+  <div id="panelLeft" class="panel">
+    <div id="panelLeftLabel" class="label">
+      <span>Files</span>
+    </div>
+    <div class="content">
+    </div>
+  </div>
+<div id="panelMiddle" class="panel">
 <div class="scrollable">
   <div id="inputContainer" class="inputContainer">
     <textarea id="srcInput" class="inputArea inputBox">You really need to enable javascript or sth!</textarea>
@@ -69,7 +76,12 @@
   </div>
 </div>
 </div>
-<div id="panelRight">
+<div id="panelRight" class="panel">
+  <div id="panelLeftLabel" class="label">
+    <span>Disasm</span>
+  </div>
+  <div class="content">
+  </div>
 </div>
 </div>
 </html>
