--- a/ws_ide.html
+++ b/ws_ide.html
@@ -27,79 +27,85 @@
     <title></title>
   </head>
   <body>
-    <div id="buttonDiv">
-      <select id="example"
-           onchange="ee.wsIde.loadExample();">
-        </select> <span class="btn"><a href="javascript:void(0);"
-         onclick="ee.wsIde.runProgram();">[Run]</a></span> <span class="btn"><a href="javascript:void(0);"
-         onclick="ee.wsIde.optimizeProgram();">[Optimize]</a></span> <span class="btn"
-           id="btnEnableHighlight"
-           style="display:none"><a href="javascript:void(0);"
-         onclick="ee.wsIde.setHighlight(true);">[ ]Highlight</a></span> <span class="btn"
-           id="btnDisableHighlight"
-           style="display: none;"><a href="javascript:void(0);"
-         onclick="ee.wsIde.setHighlight(false);">[X]Highlight</a></span>
-    </div>
     <div id="panels">
       <div id="panelLeft"
            class="panel">
         <div id="panelLeftLabel"
              class="label">
-          <span class="btn"
-               style="display: none;"><span>Files</span></span>
+          <span>Files</span>
         </div>
-        <div class="content"></div>
+        <div class="content">
+          <div id="fileList"></div>
+        </div>
       </div>
       <div id="panelMiddle"
            class="panel">
-        <div class="scrollable">
-          <div id="inputContainer"
-               class="inputContainer">
-            <textarea id="srcInput"
-                 class="inputArea inputBox">
+        <div id="panelMiddleLabel"
+             class="label">
+          <span>noname.ws</span>
+        </div>
+        <div class="content">
+          <div id="buttonDiv">
+             <span class="btn"><a href="javascript:void(0);"
+               onclick="ee.wsIde.runProgram();">[Run]</a></span> <span class="btn"><a href="javascript:void(0);"
+               onclick="ee.wsIde.optimizeProgram();">[Optimize]</a></span> <span class="btn"
+                 id="btnEnableHighlight"
+                 style="display:none"><a href="javascript:void(0);"
+               onclick="ee.wsIde.setHighlight(true);">[ ]Highlight</a></span> <span class="btn"
+                 id="btnDisableHighlight"
+                 style="display: none;"><a href="javascript:void(0);"
+               onclick="ee.wsIde.setHighlight(false);">[X]Highlight</a></span>
+          </div>
+          <div id="scrollableSource" class="scrollable">
+            <div id="inputContainer"
+                 class="inputContainer">
+              <textarea id="srcInput"
+                   class="inputArea inputBox">
 You really need to enable javascript or sth!
 </textarea>
-            <div id="srcOverlay"
-                 class="inputArea inputOverlay"></div>
-          </div>
-        </div>
-        <div id="srcHiddenDiv"
-             class="inputArea"
-             style="display: none;"></div>
-        <div class="outputTabs">
-          <div class="tabLabels">
-            <div class="btn">
-              <a href="#printTab"
-                   onclick="return ee.wsIde.switchTab(this);">Output</a>
-            </div>
-            <div class="btn">
-              <a href="#consoleTab"
-                   onclick="return ee.wsIde.switchTab(this);">Console</a>
+              <div id="srcOverlay"
+                   class="inputArea inputOverlay"></div>
             </div>
           </div>
-          <div class="allTabs">
-            <div id="printTab"
-                 class="tabContent">
-              <span class="btn"><a href="javascript:void(0);"
-                 onclick="return ee.wsIde.clearPrintArea('#printArea');">[Clear]</a></span>
-              <div class="outputArea"
-                   onclick="$(this).find('input[type=text]').focus();">
-                <div id="printArea"
-                     class="outputText">
-                  <form onsubmit="return ee.wsIde.handleUserInput('#userInput');">
-                    <input type="text"
-                          id="userInput"
-                          class="userInput">
-                  </form>
-                </div>
+          <div id="srcHiddenDiv"
+               class="inputArea"
+               style="display: none;"></div>
+          <div class="outputTabs">
+            <div class="tabLabels">
+              <div class="btn">
+                <a href="#printTab"
+                     onclick="return ee.wsIde.switchTab(this);">Output</a>
+              </div>
+              <div class="btn">
+                <a href="#consoleTab"
+                     onclick="return ee.wsIde.switchTab(this);">Console</a>
               </div>
             </div>
-            <div id="consoleTab"
-                 class="tabContent">
-              <span class="btn"><a href="javascript:void(0);"
-                 onclick="return ee.wsIde.clearPrintArea('#consoleArea');">[Clear]</a></span>
-              <div id="consoleArea"
-                   class="outputArea consoleText"></div>
+            <div class="allTabs">
+              <div id="printTab"
+                   class="tabContent">
+                <span class="btn"><a href="javascript:void(0);"
+                   onclick="return ee.wsIde.clearPrintArea('#printArea');">[Clear]</a></span>
+                <div class="outputArea"
+                     onclick="$(this).find('input[type=text]').focus();">
+                  <div id="printArea"
+                       class="outputText">
+                    <span></span>
+                    <form onsubmit="return ee.wsIde.handleUserInput('#userInput');">
+                      <input type="text"
+                            id="userInput"
+                            class="userInput">
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div id="consoleTab"
+                   class="tabContent">
+                <span class="btn"><a href="javascript:void(0);"
+                   onclick="return ee.wsIde.clearPrintArea('#consoleArea');">[Clear]</a></span>
+                <div id="consoleArea"
+                     class="outputArea consoleText"></div>
+              </div>
             </div>
           </div>
         </div>
