Changed waiting for input and added read number.

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -87,7 +87,7 @@ You really need to enable javascript or sth!
                 <span class="btn"><a href="javascript:void(0);"
                    onclick="return ee.wsIde.clearPrintArea('#printArea');">[Clear]</a></span>
                 <div class="outputArea"
-                     onclick="$(this).find('input[type=text]').focus();">
+                     onclick="ee.wsIde.focusUserInput('#userInput')">
                   <div id="printArea"
                        class="outputText">
                     <span></span>
