Added tab emphasise and improved mem update.

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -72,11 +72,11 @@ You really need to enable javascript or sth!
                style="display: none;"></div>
           <div class="outputTabs">
             <div class="tabLabels">
-              <div class="btn">
+              <div id="tabLabelPrint" class="btn">
                 <a href="#printTab"
                      onclick="return ee.wsIde.switchTab(this);">Output</a>
               </div>
-              <div class="btn">
+              <div id="tabLabelConsole" class="btn">
                 <a href="#consoleTab"
                      onclick="return ee.wsIde.switchTab(this);">Console</a>
               </div>
