Added missing title

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -24,7 +24,7 @@
     <script type="text/javascript"
           src="ws_optimizer.js">
 </script>
-    <title></title>
+    <title>Whitelips the Whitespace IDE</title>
   </head>
   <body>
     <div id="panels">
