Added assembly support (running). Heap returns number zero instead of undefined.

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -22,11 +22,19 @@
           src="ws_core.js">
 </script>
     <script type="text/javascript"
+          src="ws_asm.js">
+</script>
+    <script type="text/javascript"
           src="ws_optimizer.js">
 </script>
     <title>Whitelips the Whitespace IDE</title>
   </head>
   <body>
+    <div id="fog" class="modalFog" style="display: none;">
+      <p>
+        <div id="modal"></div>
+      </p>
+    </div>
     <div id="panels">
       <div id="panelLeft"
            class="panel">
