Added file basic file manipulation - storing files locally in localStorage.

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -45,8 +45,10 @@
         <div class="buttonBar">
           <span class="btn"><a href="javascript:void(0);"
                onclick="return ee.wsIde.newFile();">[New]</a></span>
-           <span id="deleteFile" class="btn"><a href="javascript:void(0);"
+           <span class="btn localStorageButton"><a href="javascript:void(0);"
                onclick="return ee.wsIde.deleteFile();">[Delete]</a></span>
+            <span class="btn localStorageButton"><a href="javascript:void(0);"
+               onclick="return ee.wsIde.saveFile();">[Save]</a></span>
         </div>
         <div class="content">
           <div id="fileList">
