Added splash screen.

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -159,5 +159,19 @@ You really need to enable javascript or sth!
         <div class="content"></div>
       </div>
     </div>
+    <div style="display: none">
+      <div id="splashScreenModal">
+       <div id="splashScreen">
+         <div class="nameVersion">
+Whitelips IDE 
+      for <a href="http://compsoc.dur.ac.uk/whitespace/" target="_blank">Whitespace</a>
+
+      ver 0.9</div>
+         <div>
+          Source: <a href="https://github.com/vii5ard/whitespace" target="_blank" >https://github.com/vii5ard/whitespace</a>
+         </div>
+       </div>
+      </div>
+    </div>
   </body>
 </html>
