Added parse error messages.

--- a/ws_ide.html
+++ b/ws_ide.html
@@ -90,6 +90,7 @@ You really need to enable javascript or sth!
           <div id="srcHiddenDiv"
                class="inputArea"
                style="display: none;"></div>
+          <div id="errorDiv"></div>
           <div class="outputTabs">
             <div class="tabLabels">
               <div id="tabLabelPrint" class="btn">
