--- a/ws_ide.html
+++ b/ws_ide.html
@@ -66,16 +66,20 @@
         </div>
         <div class="content">
           <div id="buttonDiv">
-             <span class="btn"><a href="javascript:void(0);"
-               onclick="ws_ide.runProgram();">[Run]</a></span> <span class="btn"><a href="javascript:void(0);"
-               onclick="ws_ide.optimizeProgram();">[Optimize]</a></span> <span class="btn"
-                 id="btnEnableHighlight"
-                 style="display:none"><a href="javascript:void(0);"
-               onclick="ws_ide.setHighlight(true);">[ ]Highlight</a></span> <span class="btn"
-                 id="btnDisableHighlight"
-                 style="display: none;"><a href="javascript:void(0);"
-               onclick="ws_ide.setHighlight(false);">[X]Highlight</a></span>
+             <span class="btn"><a href="javascript:void(0);" onclick="ws_ide.runProgram();">[Run]</a></span> 
+             <span class="btn"><a href="javascript:void(0);" onclick="ws_ide.optimizeProgram();">[Optimize]</a></span> 
+             <span class="btn" id="btnEnableHighlight"  style="display:none"><a href="javascript:void(0);" onclick="ws_ide.setHighlight(true);">[ ]Highlight</a></span> 
+             <span class="btn" id="btnDisableHighlight" style="display: none;"><a href="javascript:void(0);"  onclick="ws_ide.setHighlight(false);">[X]Highlight</a></span>
+           <div style="display:inline-block;">
+            <div style="display:inline-block;">
+              Filetype:
+            </div>
+            <div id="filetype" style="display:inline-block;">
+              <span class="btn" id="lang_WS"><a href="javascript:void(0);" onclick="ws_ide.setLang('WSA');">[Whitespace]</a></span>
+              <span class="btn" id="lang_WSA"><a href="javascript:void(0);" onclick="ws_ide.setLang('WS');" >[ Assembly ]</a></span>
+            </div>
           </div>
+         </div>
           <div id="scrollableSource" class="scrollable">
             <div id="inputContainer"
                  class="inputContainer">
