Added stop button for debug panel.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ You really need to enable javascript or sth!
         <div class="buttonBar">
           <span class="btn" id="btnDebugRunProgram"><a href="javascript:void(0);"  onclick="ws_ide.runProgram(true);">[Run]</a></span>
           <span class="btn" id="btnDebugStepProgram"><a href="javascript:void(0);"  onclick="ws_ide.stepProgram();">[Step]</a></span>
+          <span class="btn" id="btnDebugStopProgram"><a href="javascript:void(0);"  onclick="ws_ide.stopProgram();">[Stop]</a></span>
         </div>
         <div class="content">
           <div id="disasm">
