Updated libs and partially integrated fs.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           src="ws_util.js">
 </script>
     <script type="text/javascript"
+          src="ws_fs.js">
+</script>
+    <script type="text/javascript"
           src="ws_ide.js">
 </script>
     <script type="text/javascript"
