Fixed file handling. Added running animation.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ You really need to enable javascript or sth!
           <div id="srcHiddenDiv"
                class="inputArea"
                style="display: none;"></div>
-          <div id="errorDiv"></div>
+          <div id="errorDiv">&nbsp;</div>
+          <div id="animDiv">&nbsp;</div>
           <div class="outputTabs">
             <div class="tabLabels">
               <div id="tabLabelPrint" class="btn">
