Rewrite of the optimized/minimizer.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <script type="text/javascript"
           src="ws_optimizer.js">
 </script>
-    <title>Whitelips the Whitespace IDE</title>
+     <script type="text/javascript"
+          src="ws_opt.js">
+</script>
+   <title>Whitelips the Whitespace IDE</title>
   </head>
   <body>
     <div id="fog" class="modalFog" style="display: none;">
