--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
    <title>Whitelips the Whitespace IDE</title>
   </head>
   <body>
-    <div id="fog" class="modalFog" style="display: none;">
-      <p>
-        <div id="modal"></div>
-      </p>
     </div>
     <div id="panels">
       <div id="panelLeft"
@@ -182,9 +178,9 @@ You really need to enable javascript or sth!
         </div>
       </div>
     </div>
-    <div style="display: none">
-      <div id="splashScreenModal">
-       <div id="splashScreen">
+    <div style="display: none" id="fog" class="modalFog" onClick="ws_ide.hideModal();"></div>
+      <div id="modal">
+       <div id="splashScreenModal" class="modalContent" onClick="ws_ide.hideModal();">
          <div class="nameVersion">
 Whitelips IDE 
       for <a href="http://compsoc.dur.ac.uk/whitespace/" target="_blank">Whitespace</a>
@@ -193,8 +189,13 @@ Whitelips IDE
          <div>
           Source: <a href="https://github.com/vii5ard/whitespace" target="_blank" >https://github.com/vii5ard/whitespace</a>
          </div>
-       </div>
       </div>
-    </div>
+      <div id="helpModal" class="modalContent">
+        <div class="buttonBar">
+          <span class="btn"><a href="javascript:void(0);" onClick="ws_ide.hideModal();">[Close]</a></span>
+        </div>
+        <div id="helpContent">
+        </div>
+      </div>
   </body>
 </html>
