--- a/help.html
+++ b/help.html
@@ -36,7 +36,7 @@ As there is no official standard, Whitelips features it's own assembly
 language. Care has been taken to make it compatible with others, but
 this has never been a goal.
 </div>
-<div name="asm_keywords">
+<div>
   push     $n - Pushe value $n onto the stack.
   dup         - Duplicate the topmost stack element.
   copy     $n - copies the $n-th element from stack, where 0 is the topmost
@@ -70,4 +70,31 @@ Where:
 <a href="#top">[top]</a>
 </div>
 
+<a id="optimizer" />
+<div>
+Optimizer <a href="#top">[top]</a>
+=========
+
+The main filosophy behind the optimizer is that all Whitespace instructions are
+equally slow. This means that all optimizations are made to reduce the number of
+instructions. Optimizer guarantees that the number of instructions in the output
+is less or equal to the original program.
+
+As a secondary objective, the optimizer tries to reduce the size of the program to
+speed up parsing. The optimizer does not guarantee that the output code is smaller
+or equal in bytes compared to the initial program.
+
+The optimizer works on the Whitespace instruction level, which means the assembly
+programs can not be optimized directly - they have to be compiled into Whitespace.
+This is a serious restriction by design.
+
+Rules:
+  * Remove unreachable code.
+  * Inline unconditional jumps, if possibe.
+  * Inline function calls.
+  * Remove unused and duplicate labels.
+  * Mimimize label names by usage in the program.
+
+<a href="#top">[top]</a>
+</div>
 </html>
