--- a/index.html
+++ b/index.html
@@ -66,22 +66,23 @@
         </div>
         <div class="content">
           <div id="buttonDiv">
-             <span class="btn"><a href="javascript:void(0);" onclick="ws_ide.runProgram();">[Run]</a></span> 
-             <span class="btn" id="btnCompile"><a href="javascript:void(0);" onclick="ws_ide.compileAsm();">[Compile]</a></span> 
-             <span class="btn" id="btnOptimize"><a href="javascript:void(0);" onclick="ws_ide.optimizeProgram();">[Optimize]</a></span> 
-             <span class="btn" id="btnEnableHighlight"  style="display:none"><a href="javascript:void(0);" onclick="ws_ide.setHighlight(true);">[ ]Highlight</a></span> 
-             <span class="btn" id="btnDisableHighlight" style="display: none;"><a href="javascript:void(0);"  onclick="ws_ide.setHighlight(false);">[X]Highlight</a></span>
-             <span class="btn" id="btnDownload"><a href="javascript:void(0);" onclick="ws_ide.downloadFile();">[Download]</a></span> 
-           <div style="display:inline-block;">
+            <span class="btn"><a href="javascript:void(0);" onclick="ws_ide.runProgram();">[Run]</a></span> 
+            <span class="btn" id="btnCompile"><a href="javascript:void(0);" onclick="ws_ide.compileAsm();">[Compile]</a></span> 
+            <span class="btn" id="btnOptimize"><a href="javascript:void(0);" onclick="ws_ide.optimizeProgram();">[Optimize]</a></span> 
+            <span class="btn" id="btnEnableHighlight"  style="display:none"><a href="javascript:void(0);" onclick="ws_ide.setHighlight(true);">[ ]Highlight</a></span> 
+            <span class="btn" id="btnDisableHighlight" style="display: none;"><a href="javascript:void(0);"  onclick="ws_ide.setHighlight(false);">[X]Highlight</a></span>
+            <span class="btn" id="btnDownload"><a href="javascript:void(0);" onclick="ws_ide.downloadFile();">[Download]</a></span> 
             <div style="display:inline-block;">
-              Filetype:
-            </div>
-            <div id="filetype" style="display:inline-block;">
-              <span class="btn" id="lang_WS"><a href="javascript:void(0);" onclick="ws_ide.setLang('WSA');">[Whitespace]</a></span>
-              <span class="btn" id="lang_WSA"><a href="javascript:void(0);" onclick="ws_ide.setLang('WS');" >[ Assembly ]</a></span>
+              <div style="display:inline-block;">
+                Filetype:
+              </div>
+              <div id="filetype" style="display:inline-block;">
+               <span class="btn" id="lang_WS"><a href="javascript:void(0);" onclick="ws_ide.setLang('WSA');">[Whitespace]</a></span>
+               <span class="btn" id="lang_WSA"><a href="javascript:void(0);" onclick="ws_ide.setLang('WS');" >[ Assembly ]</a></span>
+              </div>
+              <span class="btn" id="btnHelp"><a href="javascript:void(0);" onclick="ws_ide.displayHelp();">[ HELP ]</a></span> 
             </div>
           </div>
-         </div>
           <div id="scrollableSource" class="scrollable">
             <div id="inputContainer"
                  class="inputContainer">
@@ -193,9 +194,9 @@ Whitelips IDE
       <div id="helpModal" class="modalContent">
         <div class="buttonBar">
           <span class="btn"><a href="javascript:void(0);" onClick="ws_ide.hideModal();">[Close]</a></span>
+          <span class="btn"><a href="help.html" target="_blank" onClick="ws_ide.hideModal();">[Open in new window]</a></span>
         </div>
-        <div id="helpContent">
-        </div>
+        <div id="helpModalContent"></div>
       </div>
   </body>
 </html>
