Added EOF button for entering code -1;

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@ You really need to enable javascript or sth!
                 <div class="buttonBar">
                   <span class="btn"><a href="javascript:void(0);"
                      onclick="return ws_ide.clearPrintArea('#printArea');">[Clear]</a></span>
+                  <span class="btn"><a href="javascript:void(0);"
+                     onclick="return ws_ide.handleUserInput('#userInput', -1);">[EOF]</a></span>
                 </div>
                 <div class="outputArea"
                      onclick="ws_ide.focusUserInput('#userInput')">
