--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         </div>
         <div class="content">
           <div id="buttonDiv">
-            <span class="btn" id="btnRun"><a href="javascript:void(0);" onclick="ws_ide.runProgram();">[Run]</a></span> 
+            <span class="btn" id="btnRun"><a href="javascript:void(0);" onclick="ws_ide.runProgram();">[Run ]</a></span> 
+            <span class="btn" id="btnStop" style="display:none"><a href="javascript:void(0);"  onclick="ws_ide.stopProgram();">[Stop]</a></span>
             <span class="btn" id="btnCompile"><a href="javascript:void(0);" onclick="ws_ide.compileAsm();">[Compile]</a></span> 
             <span class="btn" id="btnOptimize"><a href="javascript:void(0);" onclick="ws_ide.optimizeProgram();">[Optimize]</a></span> 
             <span class="btn" id="btnEnableHighlight"  style="display:none"><a href="javascript:void(0);" onclick="ws_ide.setHighlight(true);">[ ]Highlight</a></span> 
