Removed deprecated functionality

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ You really need to enable javascript or sth!
                   <span class="btn"><a href="javascript:void(0);"
                      onclick="return ws_ide.clearPrintArea('#printArea');">[Clear]</a></span>
                   <span class="btn"><a href="javascript:void(0);"
-                     onclick="return ws_ide.handleUserInput('#userInput', -1);">[EOF]</a></span>
+                     onclick="return ws_ide.handleUserInput('#userInput', null);">[EOF]</a></span>
                 </div>
                 <div class="outputArea"
                      onclick="ws_ide.focusUserInput('#userInput')">
