Lot of last minute changes!ˇ

--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
 <a id="top"></a>
 <div name="toc">
 o <a href="#about">[About]</a>
-o <a href="#usage">[Usage]</a>
+o <a href="#new">[What's New]</a>
 o <a href="#whitespace">[Whitespace]</a>
 o <a href="#assembly">[Assembly]</a>
 o <a href="#optimizer">[Optimizer]</a>
@@ -17,17 +17,22 @@ About <a href="#top">[top]</a>
 
 Whitelips is an online IDE for Whitespace.
 
-<a href="#top">[top]</a>
-</div>
-<div name="whitespace">
-<a id="whitespace" />
+<a id="new">
+What's New? <a href="#top">[top]</a>
+===========
+Version 0.10.1:
+  - Support for virtual machines. See vm/bf.ws.
+  - Support for compilers. See wc/bf2wsa.ws.
+  - New icons.
+  - Optional parameters for asm keywords - parameter is added using a push.
+  - Some bug fixes.
+  - EOF is interpreted as "no change".
+
 Whitespace <a href="#top">[top]</a>
 ==========
-TODO!
+Whitespace is a language that does not force you to add semicolons at the end of
+statements!
 
-<a href="#top">[top]</a>
-</div>
-<div>
 <a id="assembly" />
 Assembly <a href="#top">[top]</a>
 ========
