Updated to version 13 - inspired by the new Malbolge interpreter.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      <script type="text/javascript"
           src="ws_opt.js">
 </script>
-   <title>Whitelips the Whitespace IDE</title>
+   <title>Whitelips the Esoteric Language IDE</title>
   </head>
   <body>
     </div>
@@ -188,10 +188,10 @@ You really need to enable javascript or sth!
       <div id="modal">
        <div id="splashScreenModal" class="modalContent" onClick="ws_ide.hideModal();">
          <div class="nameVersion">
-Whitelips IDE 
-      for <a href="http://compsoc.dur.ac.uk/whitespace/" target="_blank">Whitespace</a>
+Whitelips IDE
+for esoteric languages
 
-      ver 0.10.1</div>
+      ver 0.13.0</div>
          <div>
           Source: <a href="https://github.com/vii5ard/whitespace" target="_blank" >https://github.com/vii5ard/whitespace</a>
          </div>
