Updated What's new.

--- a/help.html
+++ b/help.html
@@ -20,6 +20,16 @@ Whitelips is an online IDE for Whitespace.
 <a id="new">
 What's New? <a href="#top">[top]</a>
 ===========
+Version 0.13.1
+  - Links in "about" tab open in a new window.
+  - Memory tab is updated only when visible.
+  - Interpreter is way faster with fewer interruptions.
+===========
+Version 0.13.0:
+  - Memory can now hold arbitrary length values (BigInt).
+  - Added Malbolge interpreter and sample files.
+  - Added "about" tab for program descriptions.
+===========
 Version 0.10.1:
   - Support for virtual machines. See vm/bf.ws.
   - Support for compilers. See wc/bf2wsa.ws.
